--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,94 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+
+.container-hero{
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.text-hero {
+  position: absolute;
+  top: 30%;
+  left: 10%;
+  font-size: 26px;
+}
+
+
+.add-edit-page form {
+  display: flex;
+  flex-direction: column;
+  min-height: 360px;
+  justify-content: space-between;
+  
+} 
+
+.add-edit-page form  textarea {
+  margin-top: 8px;
+  outline: none;
+  font-size: 16px;
+  
+  
+}
+
+
+
+.add-edit-page form textarea::placeholder {
+  font-size: 16px;
+ 
+}
+
+.hidden {
+  overflow: hidden;
+}
+
+.screen {
+  width: 100vw;
+}
+.h-screen {
+  height: 100vh;
+}
+.inset{
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.relative {
+  position: relative;
+}
+
+
+/*  */
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgba(0,0,0,var(--tw-bg-opacity));
+}
+
+.w-full {
+  width: 100%;
+}
+.h-full {
+  height: 100%;
+}
+.inset-0 {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.absolute {
+  position: absolute;
+}
+.pointer-events-auto {
+  pointer-events: auto;
 }
